--- a/style.css
+++ b/style.css
@@ -149,7 +149,16 @@ body{
 }
 .container-riga-4{
     width: 70%;
-    height: 450px;
+    height: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.container-riga2{
+    width: 70%;
+    height: 400px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -176,9 +185,25 @@ body{
 }
 .contenitore-testo{
     width: 50%;
-    height: 70%;;
+    height: 70%;
 }
 .testo-grande{
+    width: 50%;
+    height: 20%;
+}
+.titolo-grande{
+    padding-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 35px;
+}
+.contenuto-grande{
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+    line-height: 20px;
     
 }
 .contenitore-immagine{
@@ -205,10 +230,11 @@ body{
 }
 
 .rettangolo-verde{
-    width: 40%;
+    width: 80%;
     height: 90%;
-    background-color: rgb(4, 119, 62);
-    border: 2px Dashed black;
+    background-image: url(discord-assets/img/item4-big.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .rettangolo-rosso{
     width: 12%;
